[project]
name = "synalinks-memory"
dynamic = ["version"]
description = "Python SDK for the Synalinks Memory API"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.hatch.version]
path = "synalinks_memory/version.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
